@@ -55,95 +55,6 @@ load Gem.bin_path('a', 'executable', version)
     assert_equal expected, wrapper
   end
 
-  def test_build_extensions_none
-    use_ui @ui do
-      @installer.build_extensions
-    end
-
-    assert_equal '', @ui.output
-    assert_equal '', @ui.error
-
-    refute File.exist?('gem_make.out')
-  end
-
-  def test_build_extensions_extconf_bad
-    @installer.spec = @spec
-    @spec.extensions << 'extconf.rb'
-
-    e = assert_raises Gem::Installer::ExtensionBuildError do
-      use_ui @ui do
-        @installer.build_extensions
-      end
-    end
-
-    assert_match(/\AERROR: Failed to build gem native extension.$/, e.message)
-
-    assert_equal "Building native extensions.  This could take a while...\n",
-                 @ui.output
-    assert_equal '', @ui.error
-
-    gem_make_out = File.join @gemhome, 'gems', @spec.full_name, 'gem_make.out'
-
-    assert_match %r%#{Regexp.escape Gem.ruby} extconf\.rb%,
-                 File.read(gem_make_out)
-    assert_match %r%#{Regexp.escape Gem.ruby}: No such file%,
-                 File.read(gem_make_out)
-  end
-
-  def test_build_extensions_unsupported
-    @installer.spec = @spec
-    FileUtils.mkdir_p @spec.gem_dir
-    gem_make_out = File.join @spec.gem_dir, 'gem_make.out'
-    @spec.extensions << nil
-
-    e = assert_raises Gem::Installer::ExtensionBuildError do
-      use_ui @ui do
-        @installer.build_extensions
-      end
-    end
-
-    assert_match(/^\s*No builder for extension ''$/, e.message)
-
-    assert_equal "Building native extensions.  This could take a while...\n",
-                 @ui.output
-    assert_equal '', @ui.error
-
-    assert_equal "No builder for extension ''\n", File.read(gem_make_out)
-  ensure
-    FileUtils.rm_f gem_make_out
-  end
-
-  def test_build_extensions_with_build_args
-    args = ["--aa", "--bb"]
-    @installer.build_args = args
-    @installer.spec = @spec
-    @spec.extensions << 'extconf.rb'
-
-    File.open File.join(@spec.gem_dir, "extconf.rb"), "w" do |f|
-      f.write <<-'RUBY'
-        puts "IN EXTCONF"
-        extconf_args = File.join File.dirname(__FILE__), 'extconf_args'
-        File.open extconf_args, 'w' do |f|
-          f.puts ARGV.inspect
-        end
-
-        File.open 'Makefile', 'w' do |f|
-          f.puts "default:\n\techo built"
-          f.puts "install:\n\techo installed"
-        end
-      RUBY
-    end
-
-    use_ui @ui do
-      @installer.build_extensions
-    end
-
-    path = File.join @spec.gem_dir, "extconf_args"
-
-    assert_equal args.inspect, File.read(path).strip
-    assert File.directory? File.join(@spec.gem_dir, 'lib')
-  end
-
   def test_check_executable_overwrite
     @installer.generate_bin
 
